welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:3: error: value unary_! is not a member of Unit
  while (!fonctionTest()) {
         ^SnakeBuggle:22: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
          return true
                 ^SnakeBuggle:22: warning: enclosing method fonctionTest has result type Unit: return value discarded
          return true
          ^SnakeBuggle:28: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
          return true
                 ^SnakeBuggle:28: warning: enclosing method fonctionTest has result type Unit: return value discarded
          return true
          ^SnakeBuggle:32: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false
           ^SnakeBuggle:32: warning: enclosing method fonctionTest has result type Unit: return value discarded
    return false
    ^